--- a/FontWeb/FontWeb/FontWeb.csproj
+++ b/FontWeb/FontWeb/FontWeb.csproj
@@ -12,6 +12,14 @@
     <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="IronPython" Version="3.4.1" />
     <PackageReference Include="IronPython.StdLib" Version="3.4.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="7.0.20" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.20" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Analyzers" Version="7.0.20" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="7.0.20" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.20" />
+    <PackageReference Include="Microsoft.AspNetCore.Metadata" Version="8.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Routing.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.20" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
